# domino-quimico

./: bancoDeDados.sql
backend/: .env  .env.example  CMakeLists.txt
backend/include/db/: database.hpp
backend/include/middleware/: auth_middleware.hpp
backend/include/models/: match.hpp  tile.hpp  user.hpp
backend/include/routes/: auth_routes.hpp  game_routes.hpp  match_routes.hpp  report_routes.hpp  user_routes.hpp
backend/include/utils/: hash_utils.hpp  jwt_utils.hpp  response_utils.hpp
backend/src/: main.cpp
backend/src/db/: database.cpp
backend/src/middleware/: auth_middleware.cpp
backend/src/models/: match.cpp  tile.cpp  user.cpp
backend/src/routes/: auth_routes.cpp  game_routes.cpp  match_routes.cpp  report_routes.cpp  user_routes.cpp
backend/src/utils/: hash_utils.cpp  jwt_utils.cpp
domino-quimico/: index.html  package.json
domino-quimico/domino-quimico/: package-lock.json
domino-quimico/frontend/src/components/: FloatingDecor.jsx
domino-quimico/frontend/src/pages/: GamePage.jsx  RegisterPage.jsx  WaitingPage.jsx
frontend/: package-lock.json  package.json  tailwind.config.js
frontend/src/: App.jsx
frontend/src/pages/: ConfigPage.jsx  DashboardAlunoPage.jsx  DashboardProfPage.jsx  GamePage.jsx  GerenciarAlunosPage.jsx  LandingPage.jsx  LobbyPage.jsx  LoginPage.jsx  RelatorioPage.jsx
frontend/src/styles/: globals.css
